favicon size changes for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
         <link rel="stylesheet" href="responsiveStylesheet.css"/>
         <link rel="icon" href="Assets/logos/altLogo_whiteBackground.png">
-        <link rel="apple-touch-icon" href="Assets/logos/altLogo_whiteBackground.png">
+        <link rel="apple-touch-icon" href="Assets/logos/altLogo_whiteBackground.png" sizes = "120 X 120">
+        <link rel="apple-touch-icon" href="Assets/logos/altLogo_whiteBackground.png" sizes = "150 X 150">
         <link rel="apple-touch-icon-precomposed" href="Assets/logos/altLogo_whiteBackground.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
