Replaced Luma img + link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                             <div class="linksContainer">
                                 <div class = 'linkBox'>
-                                    <a class="viewLive" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank"></a>
+                                    <a class="viewLive" href="https://luma-shop.herokuapp.com/" target="_blank"></a>
                                     <div class = 'linksLabelDiv' >
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
                                         <span class = 'linkText'>see live</span>
