added resume to nav + actual pics 4 portfolio

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <a id="portfolioLink"href="#portfolio">portfolio<div id="portfolioUnderline"></div></a> 
                 <a id="aboutLink" href="#about">about<div id="AboutUnderline"></div></a>
                 <a id="contactLink" href="#contact">contact<div id="ContactUnderline"></div></a>
+                <a id="resumeLink" href="#resumeSection">resume<div id="resumeUnderline"></div></a>
             </nav>
 
             <nav id = 'hamburgerNav'>
@@ -36,6 +37,7 @@
                 <a id="hamPortfolioLink"href="#portfolio">portfolio<div id="hamPortfolioUnderline"></div></a> 
                 <a id="hamAboutLink" href="#about">about<div id="hamAboutUnderline"></div></a>
                 <a id="hamContactLink" href="#contact">contact<div id="hamContactUnderline"></div></a>
+                <a id="hamResumeLink" href="#resumeSection">resume</a>
             </nav>
             <img src = 'Assets/icons/menuIcon.svg' id = 'menuIcon' alt = 'hamburger menu'>
             <div id = 'extraUnderline'></div>
@@ -90,11 +92,12 @@
                     <div class="projects">
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">ScheduleBooker:&nbsp; Professional Scheduling Software.</h5>
-                                <p class = 'langsList'>Java | SQL | CSS</p>
+                                <h5 class="projectTitle">ScheduleBooker:&nbsp; Appointment-Scheduling Desktop Software.</h5>
+                                <p class = 'langsList'>Java | SQL | CSS3</p>
                                 <p class = 'projectDescription'>
-                                    A robust appointment-scheduling desktop app for consultant services. Login to add new customers and appointments, see employee schedules, 
-                                    and view live dashboard summaries of appointment stats.
+                                    A robust appointment-scheduling desktop program for managing customers and their appointments. Login to add new customers and appointments, see employee schedules, and view live dashboard summaries of appointment stats.
+                                    <br><br>
+                                    <span class = 'functionalities'>Notable functionalities:</span> authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language, date, and time localization, and input verification/error-handling.
                                 </p>
                             </div>
 
@@ -128,11 +131,51 @@
                     <div class="projects">
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">Luma eCommerce Website</h5>
-                                <p class = 'langsList'>JavaScript | MongoDB | CSS3 | HTML5</p>
+                                <h5 class="projectTitle">TermTracker:&nbsp; Android App</h5>
+                                <p class = 'langsList'>Java</p>
                                 <p class = 'projectDescription'>
-                                    An eCommerce website built with a MongoDB product database. Features a full shopping cart, 
-                                    search funcationality, and check-out flow.
+                                    A mobile application for students to track information pertaining to their terms, courses, and tests.
+                                    <br><br>
+                                    <span class = 'functionalities'>Notable functionalities:</span> Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.
+                                </p>
+                            </div>
+
+                            <div class="linksContainer">
+                                <div class = 'linkBox'>
+                                    <a class="viewLive" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank"></a>
+                                    <div class = 'linksLabelDiv' >
+                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
+                                        <span class = 'linkText'>see live</span>
+                                    </div>
+                                </div>
+                                <div class = 'linkBox'>
+                                    <a class="learnMore" href="#" target="_blank"></a>
+                                    <div class = 'linksLabelDiv' >
+                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
+                                        <span class = 'linkText'>learn more</span>
+                                    </div>
+                                </div>
+                                <div class = 'linkBox'>
+                                    <a class="githubLink" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank"></a>
+                                    <div class = 'linksLabelDiv'>
+                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
+                                        <span class = 'linkText'>view on GitHub</span>
+                                    </div>  
+                                </div>
+                            </div>
+                            
+                        </div>     
+                    </div>
+
+                    <div class="projects">
+                        <div class="infoContainer">
+                            <div class = 'projectBody'>
+                                <h5 class="projectTitle">Luma:&nbsp; Ecommerce Website</h5>
+                                <p class = 'langsList'>JavaScript | Node.js | MongoDB | CSS3 | HTML5</p>
+                                <p class = 'projectDescription'>
+                                    An eCommerce website built with Express using a MongoDB database of products.
+                                    <br><br>
+                                    <span class = 'functionalities'>Notable functionalities:</span> Shopping cart, cookies, search feature, and full check-out flow.
                                 </p>
                             </div>
 
@@ -167,45 +210,7 @@
                     <div class="projects">
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">Weather-Checker web app.</h5>
-                                <p class = 'langsList'>JavaScript | CSS3 | HTML5 | APIs</p>
-                                <p class = 'projectDescription'>
-                                    A sleek web app for checking current and future weather conditions. Lookup weather in your current location, 
-                                    or choose a custom one. Built from scratch using AccuWeather API.
-                                </p>
-                            </div>
-
-                            <div class="linksContainer">
-                                <div class = 'linkBox'>
-                                    <a class="viewLive" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank"></a>
-                                    <div class = 'linksLabelDiv' >
-                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
-                                        <span class = 'linkText'>see live</span>
-                                    </div>
-                                </div>
-                                <div class = 'linkBox'>
-                                    <a class="learnMore" href="#" target="_blank"></a>
-                                    <div class = 'linksLabelDiv' >
-                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
-                                        <span class = 'linkText'>learn more</span>
-                                    </div>
-                                </div>
-                                <div class = 'linkBox'>
-                                    <a class="githubLink" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank"></a>
-                                    <div class = 'linksLabelDiv'>
-                                        <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
-                                        <span class = 'linkText'>view on GitHub</span>
-                                    </div>  
-                                </div>
-                            </div>
-                            
-                        </div>     
-                    </div>
-
-                    <div class="projects">
-                        <div class="infoContainer">
-                            <div class = 'projectBody'>
-                                <h5 class="projectTitle">Weather-Checker web app.</h5>
+                                <h5 class="projectTitle">Weather-Checker:&nbsp; Web App.</h5>
                                 <p class = 'langsList'>JavaScript | CSS3 | HTML5 | APIs</p>
                                 <p class = 'projectDescription'>A sleek web app for checking current and future weather conditions. Lookup weather in your current location, or choose a custom one. Built from scratch using AccuWeather API.</p>
                             </div>
@@ -344,70 +349,71 @@
                     <div class = 'bracketDiv'></div>
                 </div>
 
-
-                <div class = 'headingWrapper'>
-                    <h3 id = 'resumeHeader'>my resume<span class="accent">:</span></h3>
-                </div>
-                <div id = 'pdfBox'>
-                    <a id = 'resumeLink' href = 'Assets/JenniferDuffResume_2022.pdf' target='_blank'>view as pdf</a>
-                    <img id = 'openNewTab_icon' src = 'Assets/icons/openNewTab_icon.svg'>
-                </div>
-                <article id = 'resume'>
-                    <h5>Education</h5>
-                    <div class = 'resumeUnderline'></div>
-                    <ul>
-                        <li>
-                            <span class = 'resumeBold'>Western Governors University &#8211; B.S., Software Development</span>
-                            <br>
-                            <span class = 'resumeSubheader'>SEATTLE, WA &nbsp;|&nbsp; EXPECTED MARCH 2022</span>
-                        <li>
-                            <span class = 'resumeBold'>Pepperdine University &#8211; B.A., Biology</span>
-                            <br>
-                            <span class = 'resumeSubheader'>MALIBU, CA &nbsp;|&nbsp; MAY 2017</span>
-                        </li>
-                    </ul>
-
-                    <h5>Work Experience</h5>
-                    <div class = 'resumeUnderline'></div>
-                    <ul id = 'workExperienceList'>
-                        <li id = 'FM'>
-                            <span class = 'resumeBold'>FM Global &#8211; Field Engineering Assistant II</span>
-                            <br>
-                            <span class = 'resumeSubheader'>BELLEVUE, WA &nbsp;|&nbsp; APRIL 2019 - SEPTEMBER 2021</span>
-                        </li>
-                        <ul >
-                            <li class = 'subBullets'>Pursue risk improvement and organize loss-prevention site visits and for a team of nine engineers to decrease the likelihood of client property loss.</li>
-                            <li class = 'subBullets'>Maintain and report engineer key performance indicators to organizational leaders.</li>
-                            <li class = 'subBullets'>Communicate with internal and external stakeholders to arrange a servicing plan that meets client and company needs.</li>
-                        </ul>
-                        <li id = 'Pepperdine'>
-                            <span class = 'resumeBold'>Pepperdine University &#8211; Researcher</span>
-                            <br>
-                            <span class = 'resumeSubheader'>MALIBU, CA &nbsp;|&nbsp; SEPTEMBER 2015 – MAY 2017</span>
-                        </li>
+                <div id="resumeSection">
+                    <div class = 'headingWrapper'>
+                        <h3 id = 'resumeHeader'>my resume<span class="accent">:</span></h3>
+                    </div>
+                    <div id = 'pdfBox'>
+                        <a id = 'resumePDFLink' href = 'Assets/JenniferDuffResume_2022.pdf' target='_blank'>view as pdf</a>
+                        <img id = 'openNewTab_icon' src = 'Assets/icons/openNewTab_icon.svg'>
+                    </div>
+                    <article id = 'resume'>
+                        <h5>Education</h5>
+                        <div class = 'resumeUnderline'></div>
                         <ul>
-                            <li class = 'subBullets'>Designed and implemented original research testing pollutant effects on cells, including project scoping, data collection using MATLAB, and statistical analysis.</li>
-                            <li class = 'subBullets'>Created report showcasing changes in cellular behavior for scientific board members and presented findings at several international scientific conferences.</li>
+                            <li>
+                                <span class = 'resumeBold'>Western Governors University &#8211; B.S., Software Development</span>
+                                <br>
+                                <span class = 'resumeSubheader'>SEATTLE, WA &nbsp;|&nbsp; EXPECTED MARCH 2022</span>
+                            <li>
+                                <span class = 'resumeBold'>Pepperdine University &#8211; B.A., Biology</span>
+                                <br>
+                                <span class = 'resumeSubheader'>MALIBU, CA &nbsp;|&nbsp; MAY 2017</span>
+                            </li>
                         </ul>
-                    </ul>
 
-                    <h5>Certifications</h5>
-                    <div class = 'resumeUnderline'></div>
-                    <ul>
-                        <li>CompTIA A+ Certification</li>
-                        <li>Google IT Support Certificate</li>
-                        <li>Cornell University, Digital Marketing Certificate  </li>
-                    </ul>
+                        <h5>Work Experience</h5>
+                        <div class = 'resumeUnderline'></div>
+                        <ul id = 'workExperienceList'>
+                            <li id = 'FM'>
+                                <span class = 'resumeBold'>FM Global &#8211; Field Engineering Assistant II</span>
+                                <br>
+                                <span class = 'resumeSubheader'>BELLEVUE, WA &nbsp;|&nbsp; APRIL 2019 - SEPTEMBER 2021</span>
+                            </li>
+                            <ul >
+                                <li class = 'subBullets'>Pursue risk improvement and organize loss-prevention site visits and for a team of nine engineers to decrease the likelihood of client property loss.</li>
+                                <li class = 'subBullets'>Maintain and report engineer key performance indicators to organizational leaders.</li>
+                                <li class = 'subBullets'>Communicate with internal and external stakeholders to arrange a servicing plan that meets client and company needs.</li>
+                            </ul>
+                            <li id = 'Pepperdine'>
+                                <span class = 'resumeBold'>Pepperdine University &#8211; Researcher</span>
+                                <br>
+                                <span class = 'resumeSubheader'>MALIBU, CA &nbsp;|&nbsp; SEPTEMBER 2015 – MAY 2017</span>
+                            </li>
+                            <ul>
+                                <li class = 'subBullets'>Designed and implemented original research testing pollutant effects on cells, including project scoping, data collection using MATLAB, and statistical analysis.</li>
+                                <li class = 'subBullets'>Created report showcasing changes in cellular behavior for scientific board members and presented findings at several international scientific conferences.</li>
+                            </ul>
+                        </ul>
 
-                    <h5>Skills</h5>
-                    <div class = 'resumeUnderline'></div>
-                    <ul>
-                        <li>Experience with Java, JavaScript, Python, SQL, CSS, C++, and Microsoft Excel.</li> 
-                        <li>Experienced with data and analysis and visualization.</li>
-                        <li>Experienced in research and project management in independent and collaborative settings.</li>
-                    </ul>
+                        <h5>Certifications</h5>
+                        <div class = 'resumeUnderline'></div>
+                        <ul>
+                            <li>CompTIA A+ Certification</li>
+                            <li>Google IT Support Certificate</li>
+                            <li>Cornell University, Digital Marketing Certificate  </li>
+                        </ul>
 
-                </article>
+                        <h5>Skills</h5>
+                        <div class = 'resumeUnderline'></div>
+                        <ul>
+                            <li>Experience with Java, JavaScript, Python, SQL, CSS, C++, and Microsoft Excel.</li> 
+                            <li>Experienced with data and analysis and visualization.</li>
+                            <li>Experienced in research and project management in independent and collaborative settings.</li>
+                        </ul>
+
+                    </article>
+                </div>
 
             </section>
 
