--- a/index.html
+++ b/index.html
@@ -421,6 +421,15 @@
         </footer>
 
         <script src = 'app.js'></script>
+
         <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-    </body>
+        <script type="text/javascript">
+            document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+                var adobeDCView = new AdobeDC.View({clientId: "c32fb517528e404db36e48ffb7fa1ef3", divId: "resume"});
+                adobeDCView.previewFile({
+                    content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+                    metaData:{fileName: "JenniferDuffResume_2022.pdf"}
+                }, {embedMode: "IN_LINE"});
+            });
+        </script>    </body>
 </html>
