MORE attempts @  Adobe PDF API

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                 var adobeDCView = new AdobeDC.View({clientId: "c32fb517528e404db36e48ffb7fa1ef3", divId: "resume"});
                 adobeDCView.previewFile({
-                    content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+                    content:{location: {url: "/Assets/JenniferDuffResume_2022.pdf"}},
                     metaData:{fileName: "JenniferDuffResume_2022.pdf"}
                 }, {embedMode: "IN_LINE"});
             });
