--- a/index.html
+++ b/index.html
@@ -427,9 +427,10 @@
             document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                 var adobeDCView = new AdobeDC.View({clientId: "c32fb517528e404db36e48ffb7fa1ef3", divId: "resume"});
                 adobeDCView.previewFile({
-                    content:{location: {url: "/Assets/JenniferDuffResume_2022.pdf"}},
+                    content:{location: {url: "https://jennifer-duff.github.io/jbDevelopment/Assets/JenniferDuffResume_2022.pdf"}},
                     metaData:{fileName: "JenniferDuffResume_2022.pdf"}
                 }, {embedMode: "IN_LINE"});
             });
-        </script>    </body>
+        </script>
+    </body>
 </html>
