--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <script src = 'app.js'></script>
 
         <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                 var adobeDCView = new AdobeDC.View({clientId: "c32fb517528e404db36e48ffb7fa1ef3", divId: "resume"});
                 adobeDCView.previewFile({
@@ -431,6 +431,6 @@
                     metaData:{fileName: "JenniferDuffResume_2022.pdf"}
                 }, {embedMode: "IN_LINE"});
             });
-        </script>
+        </script> -->
     </body>
 </html>
