updated portfolio titles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="developer, full-stack, web developer, software developer, Jennifer Bowser, software engineer">
         <meta name="author" content="Jennifer Duff">
 
-        <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css">
+        <!-- <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css"> -->
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
         <link rel="stylesheet" href="responsiveStylesheet.css"/>
         <link rel="icon" href="Assets/logos/altLogo_whiteBackground.png">
@@ -93,24 +93,26 @@
                         <span class = "projectLabel">Desktop Software</span>
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">ScheduleBooker:&nbsp; Appointment-Scheduling Program.</h5>
+                                <h5 class="projectTitle">ScheduleBooker
+                                    <!-- :&nbsp; <span class = 'titleDescription'>Appointment-Scheduling Program.</span> -->
+                                </h5>
                                 <p class = 'langsList'>Java | SQL | FXML | CSS3</p>
                                 <p class = 'projectDescription'>
-                                    A robust appointment-scheduling desktop program for managing customers and their appointments. Login to add new customers and appointments, see employee schedules, and view live dashboard summaries of appointment stats.
+                                    A robust appointment-scheduling desktop program for managing customers and their appointments.
                                     <br><br>
                                     <span class = 'functionalities'>Notable functionalities:</span> authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language/date/time localization, and input verification/error-handling.
                                 </p>
                             </div>
 
                             <div class="linksContainer">
-                                <a class="viewLiveLink linkBox" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank">
+                                <a class="viewLiveLink linkBox" href="#" target="_blank">
                                     <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                     <div class = 'linksLabelDiv' >
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
                                         <span class = 'linkText'>see demo</span>
                                     </div>
                                 </a>
-                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank">
+                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff" target="_blank">
                                     <img class = "githubIcon linkIcon" src = "Assets/icons/GitHub_icon.png">
                                     <div class = 'linksLabelDiv'>
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
@@ -123,27 +125,29 @@
                     </div>
 
                     <div class="projects">
-                        <span class = "projectLabel">Mobile App</span>
+                        <span class = "projectLabel">Android Mobile App</span>
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">TermTracker:&nbsp; Android App</h5>
+                                <h5 class="projectTitle">TermTracker
+                                    <!-- :&nbsp; <span class = 'titleDescription'>Course-Planning App</span> -->
+                                </h5>
                                 <p class = 'langsList'>Java | FXML</p>
                                 <p class = 'projectDescription'>
-                                    A mobile application for students to track information pertaining to their terms, courses, and tests.
+                                    A mobile application for Android students to track information pertaining to their terms, courses, and tests.
                                     <br><br>
                                     <span class = 'functionalities'>Notable functionalities:</span> Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.
                                 </p>
                             </div>
 
                             <div class="linksContainer">
-                                <a class="viewLiveLink linkBox" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank">
+                                <a class="viewLiveLink linkBox" href="#" target="_blank">
                                     <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                     <div class = 'linksLabelDiv' >
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
                                         <span class = 'linkText'>see demo</span>
                                     </div>
                                 </a>
-                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank">
+                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff" target="_blank">
                                     <img class = "githubIcon linkIcon" src = "Assets/icons/GitHub_icon.png">
                                     <div class = 'linksLabelDiv'>
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
@@ -159,24 +163,26 @@
                         <span class = "projectLabel">Ecommerce Site</span>
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">Luma:&nbsp; Ecommerce Website</h5>
-                                <p class = 'langsList'>JavaScript | Node.js | MongoDB | CSS3 | HTML5</p>
+                                <h5 class="projectTitle">Luma
+                                    <!-- :&nbsp; <span class = 'titleDescription'>Clothing Retailer Ecommerce Website</span> -->
+                                </h5>
+                                <p class = 'langsList'>JavaScript | Node.js | MongoDB | Express | CSS3 | HTML5</p>
                                 <p class = 'projectDescription'>
                                     An eCommerce website built with Express using a MongoDB database of products.
                                     <br><br>
-                                    <span class = 'functionalities'>Notable functionalities:</span> Shopping cart, cookies, search feature, and full check-out flow.
+                                    <span class = 'functionalities'>Notable functionalities:</span> Shopping cart implementation, persistent cookies, product search feature (via database queries), and full check-out flow.
                                 </p>
                             </div>
 
                             <div class="linksContainer">
-                                <a class="viewLiveLink linkBox" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank">
+                                <a class="viewLiveLink linkBox" href="https://luma-shop.herokuapp.com/" target="_blank">
                                     <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                     <div class = 'linksLabelDiv' >
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
                                         <span class = 'linkText'>see live</span>
                                     </div>
                                 </a>
-                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank">
+                                <a class="githubLink linkBox" href="https://github.com/jennifer-duff/eCommerceSite" target="_blank">
                                     <img class = "githubIcon linkIcon" src = "Assets/icons/GitHub_icon.png">
                                     <div class = 'linksLabelDiv'>
                                         <img class = 'triangle' src = 'Assets/icons/triangle.svg'>
@@ -193,9 +199,15 @@
                         <span class = "projectLabel">Web App</span>
                         <div class="infoContainer">
                             <div class = 'projectBody'>
-                                <h5 class="projectTitle">Weather-Checker:&nbsp; Web App.</h5>
+                                <h5 class="projectTitle">Weather-Checker
+                                    <!-- :&nbsp; <span class = 'titleDescription'>Weather Forecast Web App</span> -->
+                                </h5>
                                 <p class = 'langsList'>JavaScript | CSS3 | HTML5 | APIs</p>
-                                <p class = 'projectDescription'>A sleek web app for checking current and future weather conditions. Lookup weather in your current location, or choose a custom one. Built from scratch using AccuWeather API.</p>
+                                <p class = 'projectDescription'>
+                                    A sleek web app for checking current and future weather conditions. Lookup weather in your current location, or choose a custom one. Built from scratch using AccuWeather API.
+                                    <br><br>
+                                    <span class = 'functionalities'>Notable functionalities:</span> Auto-detection of user location, location search feature, UI night/day updates based on locale timezone.
+                                </p>
                             </div>
 
                             <div class="linksContainer">
@@ -313,23 +325,15 @@
                             <p class = 'resumeSubheader'>Desktop Program — Appointment Scheduling Software</p>
                             <p class = 'resumeSubtitle'>JAVA | SQL | CSS</p>
                             <ul>
-                                <li class = 'subBullets'>
-                                    A program for managing customers and their appointments. Login to add new customers and appointments, see employee schedules, and view live dashboard summaries of appointment stats.
-                                </li>
-                                <li class = 'subBullets'>
-                                    Notable functionalities: authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language, date, and time localization, and input verification/error-handling.
-                                </li>
+                                <li class = 'subBullets'>A program for managing customers and their appointments. Login to add new customers and appointments, see employee schedules, and view live dashboard summaries of appointment stats.</li>
+                                <li class = 'subBullets'>Notable functionalities: authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language, date, and time localization, and input verification/error-handling.</li>
                             </ul>
 
-                            <p class = 'resumeSubheader'>Android App — Student Course-Tracking Application</p>
+                            <p class = 'resumeSubheader'>Android App — Course-Planning Application</p>
                             <p class = 'resumeSubtitle'>JAVA | FXML</p>
                             <ul>
-                                <li>
-                                    A mobile application for students to track information pertaining to their terms, courses, and tests.
-                                </li>
-                                <li>
-                                    Notable functionalities: Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.
-                                </li>
+                                <li>A mobile application for students to track information pertaining to their terms, courses, and tests.</li>
+                                <li>Notable functionalities: Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.</li>
                             </ul>
 
                             <p class = 'resumeSubheader'>Web Application — Ecommerce Website</p>
@@ -347,19 +351,13 @@
                         <div id = 'workExperienceBox'>
                             <h5>Work Experience</h5>
                             <div class = 'resumeUnderline'></div>
-                                <p class = 'resumeSubheader'>FM Global — Field Engineering Assistant II</p>
-                                <p class = 'resumeSubtitle'>BELLEVUE, WA | APRIL 2019 - SEPTEMBER 2021</p>
-                                <ul>
-                                    <li class = 'subBullets'>
-                                        Pursue risk improvement and organize loss-prevention site visits and for a team of nine engineers to decrease the likelihood of client property loss.
-                                    </li>
-                                    <li class = 'subBullets'>
-                                        Maintain and report engineer key performance indicators to organizational leaders.
-                                    </li>
-                                    <li class = 'subBullets'>
-                                        Communicate with internal and external stakeholders to arrange a servicing plan that meets client and company needs.
-                                    </li>
-                                </ul>
+                            <p class = 'resumeSubheader'>FM Global — Field Engineering Assistant II</p>
+                            <p class = 'resumeSubtitle'>BELLEVUE, WA | APRIL 2019 - SEPTEMBER 2021</p>
+                            <ul>
+                                <li class = 'subBullets'>Pursue risk improvement and organize loss-prevention site visits and for a team of nine engineers to decrease the likelihood of client property loss.</li>
+                                <li class = 'subBullets'>Maintain and report engineer key performance indicators to organizational leaders.</li>
+                                <li class = 'subBullets'>Communicate with internal and external stakeholders to arrange a servicing plan that meets client and company needs.</li>
+                            </ul>
                         </div>
                         
                         <div id = resumeFlexBox>
@@ -454,6 +452,6 @@
         </footer>
 
         <script src = 'app.js'></script>
-        <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+        <!-- <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script> -->
     </body>
 </html>
